tests/expectations/parser-module/bad_items_fail.out
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'Fn', 'script' -- found 'let'
    --> test_0:1:1
     |
   1 | let x: u32 = 0;
     | ^^^
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'Fn', 'script' -- found 'record'
    --> test_5:1:1
     |
   1 | record Foo {}
     | ^^^^^^
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'Fn', 'script' -- found 'mapping'
    --> test_6:1:1
     |
   1 | mapping Map
     | ^^^^^^^
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'Fn', 'script' -- found 'program'
    --> test_7:1:1
     |
   1 | program foo.aleo {}
     | ^^^^^^^
Error [EPAR0370005]: expected '@', 'struct', 'async', 'const', 'Fn', 'script' -- found '{'
    --> test_8:1:1
     |
   1 | {
     | ^
